# rusty-stub-api

./: Cargo.toml
examples/specs/: simple_get_users_spec-api.yaml
src/: errors.rs  lib.rs  main.rs  transactions.rs
src/data/: app.rs  cli_args.rs  mod.rs
