[package]
name = "rusty-stub-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
openapiv3 = "1.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
log = "0.4"
thiserror = "1.0"
anyhow = "1.0"
regex = "1.9"
clap = { version = "4.4", features = ["derive"] }
